plugins {
    id 'com.android.library'
    id 'maven-publish'
    id "com.vanniktech.maven.publish" version "0.32.0"
    id 'signing'
    id "com.diffplug.spotless" version "8.0.0"
}

group = "cloud.eppo"
version = "4.12.1"

android {
    buildFeatures.buildConfig true
    compileSdk 34

    defaultConfig {
        namespace "cloud.eppo.android"
        minSdk 26
        targetSdk 34

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
    }

    buildTypes {
        def EPPO_VERSION = "EPPO_VERSION"

        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            buildConfigField "String", EPPO_VERSION, "\"${project.properties.get("version")}\""
            matchingFallbacks = ['release']
        }

        debug {
            minifyEnabled false
            buildConfigField "String", EPPO_VERSION, "\"${project.properties.get("version")}\""
            matchingFallbacks = ['debug']
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    testOptions {
        unitTests.returnDefaultValues = true
    }
    packagingOptions {
        resources {
            excludes += "META-INF/**"
        }
    }
}

ext {}
ext.versions = [
    "junit": "4.13.2",
    "mockito": "5.14.2",
    "roboelectric": "4.12+",
    "androidx_junit": "1.2.1",
    "androidx_test_core": "1.6.1",
    "androidx_runner": "1.6.2",
    "androidx_core": "1.13.1",
    "gson": "2.9.1",
    "okhttp": "4.12.0",
    "commonsio": "2.17.0",
    "semver": "0.10.2"
]

dependencies {
    api 'cloud.eppo:sdk-common-jvm:3.13.1'

    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'uk.uuid.slf4j:slf4j-android:2.0.17-0'

    implementation "androidx.core:core:${versions.androidx_core}"
    implementation "com.squareup.okhttp3:okhttp:${versions.okhttp}"
    implementation "com.github.zafarkhaja:java-semver:${versions.semver}"
    implementation "com.fasterxml.jackson.core:jackson-databind:2.19.1"

    testImplementation "junit:junit:${versions.junit}"
    testImplementation "commons-io:commons-io:${versions.commonsio}"
    testImplementation "org.mockito:mockito-android:${versions.mockito}"
    testImplementation "org.robolectric:robolectric:${versions.roboelectric}"
    androidTestImplementation "org.mockito:mockito-android:${versions.mockito}"
    androidTestImplementation "androidx.test.ext:junit:${versions.androidx_junit}"
    androidTestImplementation "androidx.test:core:${versions.androidx_test_core}"
    androidTestImplementation "androidx.test:runner:${versions.androidx_runner}"
    androidTestImplementation "commons-io:commons-io:${versions.commonsio}"
}

spotless {
    format 'misc', {
        target '*.gradle', '.gitattributes', '.gitignore'

        trimTrailingWhitespace()
        leadingTabsToSpaces(2)
        endWithNewline()
    }
    java {
        target '**/*.java'

        googleJavaFormat()
        formatAnnotations()
    }
}

signing {
    if (System.getenv("GPG_PRIVATE_KEY") && System.getenv("GPG_PASSPHRASE")) {
        // Use in-memory keys for CI builds
        useInMemoryPgpKeys(System.env.GPG_PRIVATE_KEY, System.env.GPG_PASSPHRASE)
    }

    sign publishing.publications // Sign all Maven publications
}

// Make sure signing tasks only run if configured correctly
tasks.withType(Sign) {
    onlyIf {
        (System.getenv("GPG_PRIVATE_KEY") && System.getenv("GPG_PASSPHRASE")) ||
                (project.hasProperty('signing.keyId') &&
                        project.hasProperty('signing.password') &&
                        project.hasProperty('signing.secretKeyRingFile'))
    }
}

mavenPublishing {
    publishToMavenCentral(com.vanniktech.maven.publish.SonatypeHost.CENTRAL_PORTAL)
    signAllPublications()
    coordinates("cloud.eppo", "android-sdk", project.version)

    pom {
        name = 'Eppo Android'
        description = 'Eppo Android SDK'
        url = 'https://github.com/Eppo-exp/android-sdk'
        licenses {
            license {
                name = 'MIT License'
                url = 'http://www.opensource.org/licenses/mit-license.php'
            }
        }
        developers {
            developer {
                name = 'Eppo'
                email = 'https://www.geteppo.com'
            }
        }
        scm {
            connection = 'scm:git:git://github.com/Eppo-exp/android-sdk.git'
            developerConnection = 'scm:git:ssh://github.com/Eppo-exp/android-sdk.git'
            url = 'https://github.com/Eppo-exp/android-sdk/tree/main'
        }
    }
}

// Custom task to ensure we can conditionally publish either a release or snapshot artifact
// based on a command line switch. See github workflow files for more details on usage.
task checkVersion {
    doLast {
        if (!project.hasProperty('release') && !project.hasProperty('snapshot')) {
            throw new GradleException("You must specify either -Prelease or -Psnapshot")
        }
        if (project.hasProperty('release') && project.version.endsWith('SNAPSHOT')) {
            throw new GradleException("You cannot specify -Prelease with a SNAPSHOT version")
        }
        if (project.hasProperty('snapshot') && !project.version.endsWith('SNAPSHOT')) {
            throw new GradleException("You cannot specify -Psnapshot with a non-SNAPSHOT version")
        }
        project.ext.shouldPublish = true
    }
}

// Ensure checkVersion runs before publishing
tasks.named('publish').configure {
    dependsOn checkVersion
}

// Conditionally enable or disable publishing tasks
tasks.withType(PublishToMavenRepository) {
    onlyIf {
        project.ext.has('shouldPublish') && project.ext.shouldPublish
    }
}
